<resources>
    <string name="app_name" translatable="false">ViBlioteca</string>

    <string-array name="loan_time_array">
        <item>7 Days</item>
        <item>14 Days</item>
        <item>21 Days</item>
        <item>28 Days</item>
    </string-array>

    <string-array name="set_language_array">
        <item>English</item>
        <item>Spanish</item>
        <item>Catalan</item>
    </string-array>

    <string name="loan_time">Loans time limit</string>
    <string name="action_search">Search</string>
    <string name="imageViewContentDescription">Image of a book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="synopsis">Synopsis</string>
    <string name="description">Description</string>
    <string name="ISBNLabel" translatable="false">ISBN:</string>
    <string name="ISBN" translatable="false">ISBN</string>
    <string name="publisherLabel">Publisher:</string>
    <string name="publisher">Publisher</string>
    <string name="publishingDateLabel">Publishing date:</string>
    <string name="publishingDate">Publishing date</string>
    <string name="genreLabel">"Genre:"</string>
    <string name="genre">Genre</string>
    <string name="editionLabel">Edition:</string>
    <string name="edition">Edition</string>
    <string name="loan">Loan Book</string>
    <string name="edit">Edit</string>
    <string name="reduceStock">Reduce stock by 1</string>
    <string name="seeDetails">See details</string>
    <string name="extendLoan">Extend Loan</string>
    <string name="markAsReturned">Mark as Returned</string>
    <string name="menuBook">Books</string>
    <string name="menuLoan">Loans</string>
    <string name="menuSettings">Settings</string>
    <string name="signOut">Sign Out</string>
    <string name="preferences">Preferences</string>
    <string name="set_language" >Language</string>
    <string name="loanSummary" >Select for how long would you like to loan your books.</string>
    <string name="languageSummary" >Select the language of the app.</string>
    <string name="lowDataMode">Restrict use of mobile data</string>
    <string name="lowDataModeSummary" >This mode will restrict de data usage to the minium necessary for the app to function, book images might stop being displayed.</string>
    <string name="sendEmailModeSummary">Allow ViBlioteca to send me news about the service or information related to my loans.</string>
    <string name="sendEmailMode">Receive emails</string>
    <string name="increaseStock">Increase stock by 1</string>
    <string name="book_successfully_loaned">Book successfully loaned</string>
    <string name="error_no_books_left">ERROR: No books left to loan</string>
    <string name="operation_not_available">Operation not available offline</string>
    <string name="close_loans_first">Stock cannot be lower than loaned books</string>
    <string name="successfully_edited">Book edited successfully</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="google_sign_in_success">Google sign in successful</string>
    <string name="book_already_loaned">Book already loaned!</string>
    <string name="too_many_books_loaned">You can\'t loan more books!</string>
    <string name="max_time_reached">You can\'t extend more this loan!</string>
</resources>